Modified Express with images
Modified express with images and added new images.

--- a/Express/images.html
+++ b/Express/images.html
@@ -1,2 +1,28 @@
-<img src="me.jpg" style="width: 300px;">
-<img src="cat.jpg" style="width: 300px;">
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Fetch test</title>
+
+</head>
+
+<body>
+    <button id='b' onclick="pressed()">Click me</button>
+    <img src="" id='response' style="width: 300px;" width="300px"></img>
+
+    <script>
+        function pressed(e) {
+            fetch("/getimage")
+                .then(function (response) { return response.text(); })
+                .then(function (data) {
+                    console.log("returned filename: " + data);
+                    document.querySelector('#response').setAttribute("src", data);
+                });
+        }
+
+    </script>
+</body>
+
+</html>
